tdf#141341 writerfilter: use all NumberingTypes for pgNumFmt

We have a nice conversion function to translate from OOXML
to writer's numbering formats, so lets use that
for the page/section's numbering format too.

Change-Id: Ibf2aaae5d66c971b54440862b1156c00202663e2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/113350
Tested-by: Jenkins
Reviewed-by: Justin Luth <justin_luth@sil.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>